test/types/sync/ferguson/sync-owned-nilable-writeFF.good
sync-owned-nilable-writeFF.chpl:7: error: writeFF requires that the type contained in the sync variable be const-copyable, and const-assignable
